--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -41,3 +41,17 @@
 body {
     min-width: 100%;
 }
+
+#biografia-ep {
+    height: 7em;
+    resize: none;
+}
+
+.swal2-input {
+    width: 17em !important;
+}
+
+body.swal2-shown>[aria-hidden="true"] {
+    transition: 0.1s filter;
+    filter: blur(5px);
+}
