--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -49,9 +49,16 @@ body {
 
 .swal2-input {
     width: 17em !important;
+    margin: 0.5em 2em !important;
 }
 
 body.swal2-shown>[aria-hidden="true"] {
     transition: 0.1s filter;
     filter: blur(5px);
 }
+
+.swal2-image {
+    border-radius: 350px;
+}
+
+
