--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -44,7 +44,8 @@ body {
     overflow-y: overlay;
 }
 
-#biography-ep, #biography-gp {
+#biography-ep,
+#biography-gp {
     height: 7em;
     resize: none;
 }
@@ -63,4 +64,6 @@ body.swal2-shown>[aria-hidden="true"] {
     border-radius: 350px;
 }
 
-
+#homeA {
+    color: black;
+}
