--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -89,3 +89,20 @@ body.swal2-shown>[aria-hidden="true"] {
     border-radius: 6px;
     font-size: 1.2em;
 }
+
+.swal-text {
+    font-size: 1em !important;
+    justify-self: left !important;
+    padding: 1em 1em 0em !important;
+    margin: 0em !important;
+    align-self: center !important;
+    color: #81c784 !important;
+}
+
+
+.swal-popup {
+    display: flex !important;
+    flex-direction: row !important;
+    height: 5vh;
+    align-content: center !important;
+}
