--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -90,12 +90,20 @@ body.swal2-shown>[aria-hidden="true"] {
     font-size: 1.2em;
 }
 
-.swal-text {
+.swal-text-success,
+.swal-text-info {
     font-size: 1em !important;
     justify-self: left !important;
     padding: 1em 1em 0em !important;
     margin: 0em !important;
     align-self: center !important;
+}
+
+.swal-text-info {
+    color: "black";
+}
+
+.swal-text-success {
     color: #81c784 !important;
 }
 
