--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -66,26 +66,63 @@ body.swal2-shown>[aria-hidden="true"] {
 
 
 .leaflet-container {
-    width: 75vw;
-    height: 75vh;
-  }
+    width: 70vw;
+    height: auto;
+}
 
 #homeA {
     color: black;
 }
 
 #addPlaceDyn {
-    background: transparent; 
-    color:#81c784; 
-    border: 2px solid #81c784; 
-    border-radius: 6px; 
-    font-size:1.2em;
+    background: transparent;
+    color: #81c784;
+    border: 2px solid #81c784;
+    border-radius: 6px;
+    font-size: 1.2em;
 }
 
 #addPlaceDyn:hover {
-    background: #81c784; 
-    color: black; 
-    border: 2px solid #81c784; 
-    border-radius: 6px; 
-    font-size:1.2em;
+    background: #81c784;
+    color: black;
+    border: 2px solid #81c784;
+    border-radius: 6px;
+    font-size: 1.2em;
+}
+
+a:visited, a:hover {
+    color: #1f4a21;
+}
+
+a {
+    color:white;
+}
+.swal-text-success,
+.swal-text-info {
+    font-size: 1em !important;
+    justify-self: left !important;
+    padding: 1em 1em 0em !important;
+    margin: 0em !important;
+    align-self: center !important;
+}
+
+.swal-text-info {
+    color: "black";
+}
+
+.swal-text-success {
+    color: #81c784 !important;
+}
+
+
+.swal-popup {
+    display: flex !important;
+    flex-direction: row !important;
+    height: 5vh;
+    align-content: center !important;
+}
+
+
+#review:focus {
+   border-color: #81c784 !important;
 }
