--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -148,3 +148,29 @@ a {
   color: #81c784;
   text-align: center;
 }
+
+.cleanMap {
+  border-radius: 0.5em;
+  background-color: white;
+  padding: 0.5em 0.5em 0.5em;
+  font-family: "Calibri", "Gill Sans", "Gill Sans MT", "Trebuchet MS",
+    sans-serif;
+  font-size: 1em;
+  color: #39393a;
+}
+
+.cleanMap > button {
+  background-color: white !important;
+  color: #39393a;
+  font-size: 1em;
+  outline: none;
+  border: none;
+}
+
+.cleanMap > button > img {
+  margin-right: 0.5em;
+}
+
+.cleanMap > button:hover {
+  cursor: pointer;
+}
