--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -180,3 +180,19 @@ a {
 .cleanMap > button:hover {
   cursor: pointer;
 }
+
+#uploadImage {
+  display: none;
+}
+#uploadImageDiv {
+  margin-top: 0.8em;
+  margin-bottom: 0.3em;
+  display: flex;
+  align-items: center;
+  align-content: center;
+}
+#uploadImageDiv > p {
+  color:#39393a;
+  font-size: 0.8em;
+  font-weight: lighter;
+}
