the image linked to the pod is used as the profile image

--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -201,6 +201,11 @@ a {
   height: 250px;
 }
 
+#profileImagePod {
+  height: 250px;
+  border-radius: 500px;
+}
+
 #biography-EP {
   width: 99%;
   height: 7vh;
