Visual improvements to editProfile.tsx and editPassword.tsx

--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -205,7 +205,7 @@ a {
 #profileImagePodLM, #profileImagePodPT {
   height: 180px;
   width: auto;
-  border-radius: 500px;
+  border-radius: 3%;
 }
 
 #biography-EP {
